<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.overview.OverviewFragment">

        <ImageView
            android:id="@+id/imageRecipe_overview_id"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:src="@drawable/no_image_loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/gradient_overlayView_overview_id"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/image_gradient_overlay"
            app:layout_constraintBottom_toBottomOf="@+id/imageRecipe_overview_id"
            app:layout_constraintEnd_toEndOf="@+id/imageRecipe_overview_id"
            app:layout_constraintStart_toStartOf="@+id/imageRecipe_overview_id"
            app:layout_constraintTop_toTopOf="@+id/imageRecipe_overview_id"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/heart_imageView_overview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/imageRecipe_overview_id"
            app:layout_constraintEnd_toEndOf="@+id/gradient_overlayView_overview_id"
            app:layout_constraintTop_toTopOf="@+id/gradient_overlayView_overview_id"
            app:srcCompat="@drawable/ic_favorite_nav" />

        <TextView
            android:id="@+id/qtdLike_overview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="2dp"
            android:text="100"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageRecipe_overview_id"
            app:layout_constraintEnd_toEndOf="@+id/heart_imageView_overview_id"
            app:layout_constraintStart_toStartOf="@+id/heart_imageView_overview_id" />

        <ImageView
            android:id="@+id/time_imageView_overview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/imageRecipe_overview_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/heart_imageView_overview_id"
            app:layout_constraintTop_toTopOf="@+id/gradient_overlayView_overview_id"
            app:srcCompat="@drawable/ic_time_clock_full_black"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/qtdTime_overview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="45"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/qtdLike_overview_id"
            app:layout_constraintEnd_toEndOf="@+id/time_imageView_overview_id"
            app:layout_constraintStart_toStartOf="@+id/time_imageView_overview_id" />

        <TextView
            android:id="@+id/title_textView_overview_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/courgette"
            android:padding="4dp"
            android:text="@string/title"
            android:textColor="@color/darkGray"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageRecipe_overview_id" />

        <ImageView
            android:id="@+id/vegeterian_imageView_overview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/vegan"
            android:src="@drawable/ic_check_fulled"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_textView_overview_id" />

        <TextView
            android:id="@+id/vegeterian_textView_overview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="3dp"
            android:text="@string/vegeterian"
            app:layout_constraintBottom_toBottomOf="@+id/vegeterian_imageView_overview_id"
            app:layout_constraintStart_toEndOf="@+id/vegeterian_imageView_overview_id"
            app:layout_constraintTop_toTopOf="@+id/vegeterian_imageView_overview_id" />

        <ImageView
            android:id="@+id/glutten_imageView_overview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_check_fulled"
            app:layout_constraintStart_toEndOf="@+id/vegeterian_textView_overview_id"
            app:layout_constraintTop_toTopOf="@+id/vegeterian_imageView_overview_id" />

        <TextView
            android:id="@+id/glutten_textView_overview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="3dp"
            android:text="@string/glutten_free"
            app:layout_constraintBottom_toBottomOf="@+id/glutten_imageView_overview_id"
            app:layout_constraintStart_toEndOf="@+id/glutten_imageView_overview_id"
            app:layout_constraintTop_toTopOf="@+id/glutten_imageView_overview_id"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/healthy_imageView_overview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_check_fulled"
            app:layout_constraintStart_toEndOf="@+id/glutten_textView_overview_id"
            app:layout_constraintTop_toTopOf="@+id/glutten_imageView_overview_id" />

        <TextView
            android:id="@+id/healthy_textView_overview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="3dp"
            android:text="@string/healthy"
            app:layout_constraintBottom_toBottomOf="@+id/healthy_imageView_overview_id"
            app:layout_constraintStart_toEndOf="@+id/healthy_imageView_overview_id"
            app:layout_constraintTop_toTopOf="@+id/healthy_imageView_overview_id" />

        <ImageView
            android:id="@+id/vegan_imageView_overview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_check_fulled"
            app:layout_constraintEnd_toEndOf="@+id/vegeterian_imageView_overview_id"
            app:layout_constraintStart_toStartOf="@+id/vegeterian_imageView_overview_id"
            app:layout_constraintTop_toBottomOf="@+id/vegeterian_imageView_overview_id" />

        <TextView
            android:id="@+id/vegan_textView_overview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="3dp"
            android:text="@string/vegana"
            app:layout_constraintBottom_toBottomOf="@+id/vegan_imageView_overview_id"
            app:layout_constraintStart_toEndOf="@+id/vegan_imageView_overview_id"
            app:layout_constraintTop_toTopOf="@+id/vegan_imageView_overview_id" />

        <ImageView
            android:id="@+id/dairy_imageView_overview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check_fulled"
            app:layout_constraintBottom_toBottomOf="@+id/vegan_imageView_overview_id"
            app:layout_constraintStart_toStartOf="@+id/glutten_imageView_overview_id"
            app:layout_constraintTop_toTopOf="@+id/vegan_imageView_overview_id" />

        <TextView
            android:id="@+id/dairy_textView_overview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="3dp"
            android:text="@string/daity_free"
            app:layout_constraintBottom_toBottomOf="@+id/dairy_imageView_overview_id"
            app:layout_constraintStart_toEndOf="@+id/dairy_imageView_overview_id"
            app:layout_constraintTop_toTopOf="@+id/dairy_imageView_overview_id" />

        <ImageView
            android:id="@+id/cheap_imageView_overview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check_fulled"
            app:layout_constraintBottom_toBottomOf="@+id/dairy_imageView_overview_id"
            app:layout_constraintStart_toStartOf="@+id/healthy_imageView_overview_id"
            app:layout_constraintTop_toTopOf="@+id/dairy_imageView_overview_id" />

        <TextView
            android:id="@+id/cheap_textView_overview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="3dp"
            android:text="@string/cheap"
            app:layout_constraintBottom_toBottomOf="@+id/cheap_imageView_overview_id"
            app:layout_constraintStart_toEndOf="@+id/cheap_imageView_overview_id"
            app:layout_constraintTop_toTopOf="@+id/cheap_imageView_overview_id" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dairy_textView_overview_id">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/summary_overview_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/description"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />
            </LinearLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


