<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCard_itemIngredients_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/mediumGray"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ingredient_background_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:elevation="2dp"
            android:padding="4dp">

            <View
                android:id="@+id/whiteBackground_itemIngredients_id"
                android:layout_width="120dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_itemIngredients_id"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/whiteBackground_itemIngredients_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/whiteBackground_itemIngredients_id"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/original_ingredient" />

            <TextView
                android:id="@+id/titleTextView_itemIngredients_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/courgette"
                android:padding="4dp"
                android:text="@string/app_name"
                android:textColor="@color/darker"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/whiteBackground_itemIngredients_id"
                app:layout_constraintTop_toTopOf="@+id/whiteBackground_itemIngredients_id" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/mediumGray"
                app:layout_constraintBottom_toTopOf="@+id/unitTextView_itemIngredients_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/amountTextView_itemIngredients_id"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView_itemIngredients_id" />

            <TextView
                android:id="@+id/amountTextView_itemIngredients_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:padding="4dp"
                android:text="100"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/whiteBackground_itemIngredients_id"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView_itemIngredients_id" />

            <TextView
                android:id="@+id/unitTextView_itemIngredients_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="4dp"
                android:text="@string/grams"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/amountTextView_itemIngredients_id"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView_itemIngredients_id" />

            <TextView
                android:id="@+id/consistecyTextView_itemIngredients_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:padding="4dp"
                android:text="@string/consistency"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/whiteBackground_itemIngredients_id"
                app:layout_constraintTop_toBottomOf="@+id/amountTextView_itemIngredients_id" />

            <TextView
                android:id="@+id/originalTextView_itemIngredients_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:padding="4dp"
                android:text="@string/original_ingredient"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/whiteBackground_itemIngredients_id"
                app:layout_constraintTop_toBottomOf="@+id/consistecyTextView_itemIngredients_id" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>